--- a/OpenConnectionDialog.ui
+++ b/OpenConnectionDialog.ui
@@ -6,33 +6,25 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>271</width>
-    <height>308</height>
+    <width>474</width>
+    <height>252</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>Connect...</string>
   </property>
-  <layout class="QVBoxLayout">
-   <property name="spacing">
-    <number>6</number>
-   </property>
-   <property name="leftMargin">
-    <number>8</number>
-   </property>
-   <property name="topMargin">
-    <number>8</number>
-   </property>
-   <property name="rightMargin">
-    <number>8</number>
-   </property>
-   <property name="bottomMargin">
-    <number>8</number>
-   </property>
-   <item>
-    <widget class="QComboBox" name="connectionsComboBox"/>
+  <layout class="QGridLayout" name="gridLayout">
+   <item row="0" column="0" colspan="2">
+    <widget class="QListWidget" name="connectionsListWidget">
+     <property name="maximumSize">
+      <size>
+       <width>175</width>
+       <height>16777215</height>
+      </size>
+     </property>
+    </widget>
    </item>
-   <item>
+   <item row="0" column="2">
     <widget class="QGroupBox" name="connGroupBox">
      <property name="title">
       <string>Connection settings</string>
@@ -53,8 +45,22 @@
       <property name="spacing">
        <number>6</number>
       </property>
-      <item row="1" column="1">
-       <widget class="QComboBox" name="driverCombo"/>
+      <item row="1" column="0">
+       <widget class="QLabel" name="textLabel2">
+        <property name="text">
+         <string>D&amp;river</string>
+        </property>
+        <property name="buddy">
+         <cstring>driverCombo</cstring>
+        </property>
+       </widget>
+      </item>
+      <item row="4" column="1">
+       <widget class="QLineEdit" name="passwordEdit">
+        <property name="echoMode">
+         <enum>QLineEdit::Password</enum>
+        </property>
+       </widget>
       </item>
       <item row="3" column="0">
        <widget class="QLabel" name="textLabel4">
@@ -66,13 +72,32 @@
         </property>
        </widget>
       </item>
-      <item row="1" column="0">
-       <widget class="QLabel" name="textLabel2">
+      <item row="3" column="1">
+       <widget class="QLineEdit" name="usernameEdit"/>
+      </item>
+      <item row="1" column="1">
+       <widget class="QComboBox" name="driverCombo"/>
+      </item>
+      <item row="5" column="0">
+       <widget class="QLabel" name="textLabel5">
         <property name="text">
-         <string>D&amp;river</string>
+         <string>&amp;Hostname:</string>
         </property>
         <property name="buddy">
-         <cstring>driverCombo</cstring>
+         <cstring>hostnameEdit</cstring>
+        </property>
+       </widget>
+      </item>
+      <item row="5" column="1">
+       <widget class="QLineEdit" name="hostnameEdit"/>
+      </item>
+      <item row="6" column="0">
+       <widget class="QLabel" name="textLabel5_2">
+        <property name="text">
+         <string>P&amp;ort:</string>
+        </property>
+        <property name="buddy">
+         <cstring>portSpinBox</cstring>
         </property>
        </widget>
       </item>
@@ -89,49 +114,6 @@
         </property>
         <property name="value">
          <number>-1</number>
-        </property>
-       </widget>
-      </item>
-      <item row="3" column="1">
-       <widget class="QLineEdit" name="usernameEdit"/>
-      </item>
-      <item row="5" column="1">
-       <widget class="QLineEdit" name="hostnameEdit"/>
-      </item>
-      <item row="2" column="0">
-       <widget class="QLabel" name="textLabel3">
-        <property name="text">
-         <string>Database Name:</string>
-        </property>
-        <property name="buddy">
-         <cstring>databaseEdit</cstring>
-        </property>
-       </widget>
-      </item>
-      <item row="4" column="1">
-       <widget class="QLineEdit" name="passwordEdit">
-        <property name="echoMode">
-         <enum>QLineEdit::Password</enum>
-        </property>
-       </widget>
-      </item>
-      <item row="5" column="0">
-       <widget class="QLabel" name="textLabel5">
-        <property name="text">
-         <string>&amp;Hostname:</string>
-        </property>
-        <property name="buddy">
-         <cstring>hostnameEdit</cstring>
-        </property>
-       </widget>
-      </item>
-      <item row="6" column="0">
-       <widget class="QLabel" name="textLabel5_2">
-        <property name="text">
-         <string>P&amp;ort:</string>
-        </property>
-        <property name="buddy">
-         <cstring>portSpinBox</cstring>
         </property>
        </widget>
       </item>
@@ -173,99 +155,39 @@
         </item>
        </layout>
       </item>
+      <item row="2" column="0">
+       <widget class="QLabel" name="textLabel3">
+        <property name="text">
+         <string>Database Name:</string>
+        </property>
+        <property name="buddy">
+         <cstring>databaseEdit</cstring>
+        </property>
+       </widget>
+      </item>
      </layout>
     </widget>
    </item>
-   <item>
-    <layout class="QHBoxLayout">
-     <property name="spacing">
-      <number>6</number>
+   <item row="1" column="0">
+    <widget class="QPushButton" name="addButton">
+     <property name="text">
+      <string>Add</string>
      </property>
-     <property name="leftMargin">
-      <number>0</number>
-     </property>
-     <property name="topMargin">
-      <number>0</number>
-     </property>
-     <property name="rightMargin">
-      <number>0</number>
-     </property>
-     <property name="bottomMargin">
-      <number>0</number>
-     </property>
-     <item>
-      <spacer>
-       <property name="orientation">
-        <enum>Qt::Horizontal</enum>
-       </property>
-       <property name="sizeHint" stdset="0">
-        <size>
-         <width>40</width>
-         <height>20</height>
-        </size>
-       </property>
-      </spacer>
-     </item>
-     <item>
-      <widget class="QCheckBox" name="saveCheckBox">
-       <property name="text">
-        <string>Save this connection for future use</string>
-       </property>
-      </widget>
-     </item>
-    </layout>
+    </widget>
    </item>
-   <item>
-    <layout class="QHBoxLayout">
-     <property name="spacing">
-      <number>6</number>
+   <item row="1" column="1">
+    <widget class="QPushButton" name="removeButton">
+     <property name="text">
+      <string>Remove</string>
      </property>
-     <property name="leftMargin">
-      <number>0</number>
+    </widget>
+   </item>
+   <item row="1" column="2">
+    <widget class="QDialogButtonBox" name="buttonBox">
+     <property name="standardButtons">
+      <set>QDialogButtonBox::Cancel|QDialogButtonBox::Ok</set>
      </property>
-     <property name="topMargin">
-      <number>0</number>
-     </property>
-     <property name="rightMargin">
-      <number>0</number>
-     </property>
-     <property name="bottomMargin">
-      <number>0</number>
-     </property>
-     <item>
-      <spacer>
-       <property name="orientation">
-        <enum>Qt::Horizontal</enum>
-       </property>
-       <property name="sizeType">
-        <enum>QSizePolicy::Expanding</enum>
-       </property>
-       <property name="sizeHint" stdset="0">
-        <size>
-         <width>20</width>
-         <height>20</height>
-        </size>
-       </property>
-      </spacer>
-     </item>
-     <item>
-      <widget class="QPushButton" name="okButton">
-       <property name="text">
-        <string>&amp;OK</string>
-       </property>
-       <property name="default">
-        <bool>true</bool>
-       </property>
-      </widget>
-     </item>
-     <item>
-      <widget class="QPushButton" name="cancelButton">
-       <property name="text">
-        <string>&amp;Cancel</string>
-       </property>
-      </widget>
-     </item>
-    </layout>
+    </widget>
    </item>
   </layout>
  </widget>
@@ -275,41 +197,38 @@
   <tabstop>passwordEdit</tabstop>
   <tabstop>hostnameEdit</tabstop>
   <tabstop>portSpinBox</tabstop>
-  <tabstop>saveCheckBox</tabstop>
-  <tabstop>okButton</tabstop>
-  <tabstop>cancelButton</tabstop>
  </tabstops>
  <resources/>
  <connections>
   <connection>
-   <sender>okButton</sender>
-   <signal>clicked()</signal>
+   <sender>buttonBox</sender>
+   <signal>accepted()</signal>
    <receiver>OpenConnectionDialog</receiver>
    <slot>accept()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>179</x>
-     <y>275</y>
+     <x>327</x>
+     <y>231</y>
     </hint>
     <hint type="destinationlabel">
-     <x>157</x>
-     <y>150</y>
+     <x>236</x>
+     <y>125</y>
     </hint>
    </hints>
   </connection>
   <connection>
-   <sender>cancelButton</sender>
-   <signal>clicked()</signal>
+   <sender>buttonBox</sender>
+   <signal>rejected()</signal>
    <receiver>OpenConnectionDialog</receiver>
-   <slot>accept()</slot>
+   <slot>reject()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>265</x>
-     <y>276</y>
+     <x>327</x>
+     <y>231</y>
     </hint>
     <hint type="destinationlabel">
-     <x>157</x>
-     <y>150</y>
+     <x>236</x>
+     <y>125</y>
     </hint>
    </hints>
   </connection>
