--- a/Extension/MySQLTools.ui
+++ b/Extension/MySQLTools.ui
@@ -34,6 +34,13 @@
         </property>
        </widget>
       </item>
+      <item>
+       <widget class="QPushButton" name="clearDatabaseButton">
+        <property name="text">
+         <string>Clear Database</string>
+        </property>
+       </widget>
+      </item>
      </layout>
     </widget>
    </item>
