--- a/OpenConnectionDialog.ui
+++ b/OpenConnectionDialog.ui
@@ -6,102 +6,49 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>474</width>
-    <height>252</height>
+    <width>453</width>
+    <height>282</height>
    </rect>
+  </property>
+  <property name="sizePolicy">
+   <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
+    <horstretch>0</horstretch>
+    <verstretch>0</verstretch>
+   </sizepolicy>
   </property>
   <property name="windowTitle">
    <string>Connect to Database</string>
   </property>
-  <layout class="QGridLayout" name="gridLayout">
+  <layout class="QGridLayout" name="gridLayout_2">
    <item row="0" column="0" colspan="2">
-    <widget class="QListWidget" name="connectionsListWidget">
-     <property name="maximumSize">
-      <size>
-       <width>175</width>
-       <height>16777215</height>
-      </size>
+    <widget class="QPushButton" name="newConnectionButton">
+     <property name="text">
+      <string>New Connection</string>
+     </property>
+     <property name="icon">
+      <iconset theme="document-new">
+       <normaloff/>
+      </iconset>
      </property>
     </widget>
    </item>
-   <item row="0" column="2">
+   <item row="0" column="2" rowspan="2">
     <widget class="QGroupBox" name="connGroupBox">
      <property name="title">
       <string>Connection settings</string>
      </property>
-     <layout class="QGridLayout">
-      <property name="leftMargin">
-       <number>8</number>
-      </property>
-      <property name="topMargin">
-       <number>8</number>
-      </property>
-      <property name="rightMargin">
-       <number>8</number>
-      </property>
-      <property name="bottomMargin">
-       <number>8</number>
-      </property>
-      <property name="spacing">
-       <number>6</number>
-      </property>
-      <item row="1" column="0">
-       <widget class="QLabel" name="textLabel2">
-        <property name="text">
-         <string>D&amp;river</string>
-        </property>
-        <property name="buddy">
-         <cstring>driverCombo</cstring>
-        </property>
-       </widget>
-      </item>
-      <item row="4" column="1">
-       <widget class="QLineEdit" name="passwordEdit">
-        <property name="echoMode">
-         <enum>QLineEdit::Password</enum>
-        </property>
-       </widget>
-      </item>
+     <layout class="QGridLayout" name="gridLayout">
       <item row="3" column="0">
-       <widget class="QLabel" name="textLabel4">
+       <widget class="QLabel" name="textLabel4_2">
         <property name="text">
-         <string>&amp;Username:</string>
+         <string>&amp;Password:</string>
         </property>
         <property name="buddy">
-         <cstring>usernameEdit</cstring>
-        </property>
-       </widget>
-      </item>
-      <item row="3" column="1">
-       <widget class="QLineEdit" name="usernameEdit"/>
-      </item>
-      <item row="1" column="1">
-       <widget class="QComboBox" name="driverCombo"/>
-      </item>
-      <item row="5" column="0">
-       <widget class="QLabel" name="textLabel5">
-        <property name="text">
-         <string>&amp;Hostname:</string>
-        </property>
-        <property name="buddy">
-         <cstring>hostnameEdit</cstring>
+         <cstring>passwordEdit</cstring>
         </property>
        </widget>
       </item>
       <item row="5" column="1">
-       <widget class="QLineEdit" name="hostnameEdit"/>
-      </item>
-      <item row="6" column="0">
-       <widget class="QLabel" name="textLabel5_2">
-        <property name="text">
-         <string>P&amp;ort:</string>
-        </property>
-        <property name="buddy">
-         <cstring>portSpinBox</cstring>
-        </property>
-       </widget>
-      </item>
-      <item row="6" column="1">
        <widget class="QSpinBox" name="portSpinBox">
         <property name="specialValueText">
          <string>Default</string>
@@ -117,17 +64,30 @@
         </property>
        </widget>
       </item>
+      <item row="2" column="1">
+       <widget class="QLineEdit" name="usernameEdit"/>
+      </item>
       <item row="4" column="0">
-       <widget class="QLabel" name="textLabel4_2">
+       <widget class="QLabel" name="textLabel5">
         <property name="text">
-         <string>&amp;Password:</string>
+         <string>&amp;Hostname:</string>
         </property>
         <property name="buddy">
-         <cstring>passwordEdit</cstring>
+         <cstring>hostnameEdit</cstring>
         </property>
        </widget>
       </item>
-      <item row="2" column="1">
+      <item row="2" column="0">
+       <widget class="QLabel" name="textLabel4">
+        <property name="text">
+         <string>&amp;Username:</string>
+        </property>
+        <property name="buddy">
+         <cstring>usernameEdit</cstring>
+        </property>
+       </widget>
+      </item>
+      <item row="1" column="1">
        <layout class="QHBoxLayout" name="horizontalLayout">
         <item>
          <widget class="QLineEdit" name="databaseEdit"/>
@@ -155,7 +115,10 @@
         </item>
        </layout>
       </item>
-      <item row="2" column="0">
+      <item row="4" column="1">
+       <widget class="QLineEdit" name="hostnameEdit"/>
+      </item>
+      <item row="1" column="0">
        <widget class="QLabel" name="textLabel3">
         <property name="text">
          <string>Database Name:</string>
@@ -165,24 +128,153 @@
         </property>
        </widget>
       </item>
+      <item row="0" column="1">
+       <widget class="QComboBox" name="driverCombo"/>
+      </item>
+      <item row="3" column="1">
+       <widget class="QLineEdit" name="passwordEdit">
+        <property name="echoMode">
+         <enum>QLineEdit::Password</enum>
+        </property>
+       </widget>
+      </item>
+      <item row="7" column="0" colspan="2">
+       <widget class="QGroupBox" name="sshGroupBox">
+        <property name="enabled">
+         <bool>false</bool>
+        </property>
+        <property name="visible">
+         <bool>false</bool>
+        </property>
+        <property name="title">
+         <string>SSH Tunnel Settings</string>
+        </property>
+        <layout class="QFormLayout" name="formLayout">
+         <item row="0" column="0">
+          <widget class="QLabel" name="label">
+           <property name="text">
+            <string>Hostname</string>
+           </property>
+          </widget>
+         </item>
+         <item row="0" column="1">
+          <widget class="QLineEdit" name="sshHostnameEdit"/>
+         </item>
+         <item row="1" column="0">
+          <widget class="QLabel" name="label_2">
+           <property name="text">
+            <string>Username</string>
+           </property>
+          </widget>
+         </item>
+         <item row="1" column="1">
+          <widget class="QLineEdit" name="sshUsernameEdit"/>
+         </item>
+         <item row="2" column="0">
+          <widget class="QLabel" name="label_3">
+           <property name="text">
+            <string>Password</string>
+           </property>
+          </widget>
+         </item>
+         <item row="2" column="1">
+          <widget class="QLineEdit" name="sshPasswordEdit">
+           <property name="text">
+            <string/>
+           </property>
+          </widget>
+         </item>
+         <item row="3" column="0">
+          <widget class="QLabel" name="label_4">
+           <property name="text">
+            <string>Port</string>
+           </property>
+          </widget>
+         </item>
+         <item row="3" column="1">
+          <widget class="QSpinBox" name="sshPortSpinBox">
+           <property name="specialValueText">
+            <string>Default</string>
+           </property>
+           <property name="minimum">
+            <number>-1</number>
+           </property>
+           <property name="maximum">
+            <number>65535</number>
+           </property>
+           <property name="value">
+            <number>22</number>
+           </property>
+          </widget>
+         </item>
+        </layout>
+       </widget>
+      </item>
+      <item row="5" column="0">
+       <widget class="QLabel" name="textLabel5_2">
+        <property name="text">
+         <string>P&amp;ort:</string>
+        </property>
+        <property name="buddy">
+         <cstring>portSpinBox</cstring>
+        </property>
+       </widget>
+      </item>
+      <item row="0" column="0">
+       <widget class="QLabel" name="textLabel2">
+        <property name="text">
+         <string>D&amp;river</string>
+        </property>
+        <property name="buddy">
+         <cstring>driverCombo</cstring>
+        </property>
+       </widget>
+      </item>
+      <item row="6" column="0" colspan="2">
+       <widget class="QCheckBox" name="sshTunnelCheckBox">
+        <property name="text">
+         <string>Tunnel Connection Through SSH</string>
+        </property>
+       </widget>
+      </item>
      </layout>
     </widget>
    </item>
-   <item row="1" column="0">
+   <item row="1" column="0" colspan="2">
+    <widget class="QListWidget" name="connectionsListWidget">
+     <property name="maximumSize">
+      <size>
+       <width>175</width>
+       <height>16777215</height>
+      </size>
+     </property>
+    </widget>
+   </item>
+   <item row="2" column="0">
     <widget class="QPushButton" name="addButton">
      <property name="text">
       <string>Add</string>
      </property>
+     <property name="icon">
+      <iconset theme="add">
+       <normaloff/>
+      </iconset>
+     </property>
     </widget>
    </item>
-   <item row="1" column="1">
+   <item row="2" column="1">
     <widget class="QPushButton" name="removeButton">
      <property name="text">
       <string>Remove</string>
      </property>
+     <property name="icon">
+      <iconset theme="remove">
+       <normaloff/>
+      </iconset>
+     </property>
     </widget>
    </item>
-   <item row="1" column="2">
+   <item row="2" column="2">
     <widget class="QDialogButtonBox" name="buttonBox">
      <property name="standardButtons">
       <set>QDialogButtonBox::Cancel|QDialogButtonBox::Ok</set>
@@ -193,10 +285,17 @@
  </widget>
  <tabstops>
   <tabstop>driverCombo</tabstop>
+  <tabstop>databaseEdit</tabstop>
   <tabstop>usernameEdit</tabstop>
   <tabstop>passwordEdit</tabstop>
   <tabstop>hostnameEdit</tabstop>
   <tabstop>portSpinBox</tabstop>
+  <tabstop>fileButton</tabstop>
+  <tabstop>newConnectionButton</tabstop>
+  <tabstop>connectionsListWidget</tabstop>
+  <tabstop>addButton</tabstop>
+  <tabstop>removeButton</tabstop>
+  <tabstop>buttonBox</tabstop>
  </tabstops>
  <resources/>
  <connections>
