--- a/OpenConnectionDialog.ui
+++ b/OpenConnectionDialog.ui
@@ -37,53 +37,27 @@
      <property name="title">
       <string>Connection settings</string>
      </property>
-     <layout class="QGridLayout" name="gridLayout">
-      <item row="3" column="0">
-       <widget class="QLabel" name="textLabel4_2">
+     <layout class="QGridLayout" name="gridLayout_3">
+      <item row="0" column="0">
+       <widget class="QLabel" name="textLabel2">
         <property name="text">
-         <string>&amp;Password:</string>
+         <string>D&amp;river</string>
         </property>
         <property name="buddy">
-         <cstring>passwordEdit</cstring>
+         <cstring>driverCombo</cstring>
         </property>
        </widget>
       </item>
-      <item row="5" column="1">
-       <widget class="QSpinBox" name="portSpinBox">
-        <property name="specialValueText">
-         <string>Default</string>
-        </property>
-        <property name="minimum">
-         <number>-1</number>
-        </property>
-        <property name="maximum">
-         <number>65535</number>
-        </property>
-        <property name="value">
-         <number>-1</number>
-        </property>
-       </widget>
+      <item row="0" column="1">
+       <widget class="QComboBox" name="driverCombo"/>
       </item>
-      <item row="2" column="1">
-       <widget class="QLineEdit" name="usernameEdit"/>
-      </item>
-      <item row="4" column="0">
-       <widget class="QLabel" name="textLabel5">
+      <item row="1" column="0">
+       <widget class="QLabel" name="textLabel3">
         <property name="text">
-         <string>&amp;Hostname:</string>
+         <string>Database Name:</string>
         </property>
         <property name="buddy">
-         <cstring>hostnameEdit</cstring>
-        </property>
-       </widget>
-      </item>
-      <item row="2" column="0">
-       <widget class="QLabel" name="textLabel4">
-        <property name="text">
-         <string>&amp;Username:</string>
-        </property>
-        <property name="buddy">
-         <cstring>usernameEdit</cstring>
+         <cstring>databaseEdit</cstring>
         </property>
        </widget>
       </item>
@@ -115,26 +89,79 @@
         </item>
        </layout>
       </item>
-      <item row="4" column="1">
-       <widget class="QLineEdit" name="hostnameEdit"/>
-      </item>
-      <item row="1" column="0">
-       <widget class="QLabel" name="textLabel3">
+      <item row="2" column="0">
+       <widget class="QLabel" name="textLabel4">
         <property name="text">
-         <string>Database Name:</string>
+         <string>&amp;Username:</string>
         </property>
         <property name="buddy">
-         <cstring>databaseEdit</cstring>
+         <cstring>usernameEdit</cstring>
         </property>
        </widget>
       </item>
-      <item row="0" column="1">
-       <widget class="QComboBox" name="driverCombo"/>
+      <item row="2" column="1">
+       <widget class="QLineEdit" name="usernameEdit"/>
+      </item>
+      <item row="3" column="0">
+       <widget class="QLabel" name="textLabel4_2">
+        <property name="text">
+         <string>&amp;Password:</string>
+        </property>
+        <property name="buddy">
+         <cstring>passwordEdit</cstring>
+        </property>
+       </widget>
       </item>
       <item row="3" column="1">
        <widget class="QLineEdit" name="passwordEdit">
         <property name="echoMode">
          <enum>QLineEdit::Password</enum>
+        </property>
+       </widget>
+      </item>
+      <item row="4" column="0">
+       <widget class="QLabel" name="textLabel5">
+        <property name="text">
+         <string>&amp;Hostname:</string>
+        </property>
+        <property name="buddy">
+         <cstring>hostnameEdit</cstring>
+        </property>
+       </widget>
+      </item>
+      <item row="4" column="1">
+       <widget class="QLineEdit" name="hostnameEdit"/>
+      </item>
+      <item row="5" column="0">
+       <widget class="QLabel" name="textLabel5_2">
+        <property name="text">
+         <string>P&amp;ort:</string>
+        </property>
+        <property name="buddy">
+         <cstring>portSpinBox</cstring>
+        </property>
+       </widget>
+      </item>
+      <item row="5" column="1">
+       <widget class="QSpinBox" name="portSpinBox">
+        <property name="specialValueText">
+         <string>Default</string>
+        </property>
+        <property name="minimum">
+         <number>-1</number>
+        </property>
+        <property name="maximum">
+         <number>65535</number>
+        </property>
+        <property name="value">
+         <number>-1</number>
+        </property>
+       </widget>
+      </item>
+      <item row="6" column="0" colspan="2">
+       <widget class="QCheckBox" name="sshTunnelCheckBox">
+        <property name="text">
+         <string>Create an SSH Tunnel to connect through</string>
         </property>
        </widget>
       </item>
@@ -149,49 +176,32 @@
         <property name="title">
          <string>SSH Tunnel Settings</string>
         </property>
-        <layout class="QFormLayout" name="formLayout">
-         <item row="0" column="0">
+        <layout class="QGridLayout" name="gridLayout">
+         <item row="0" column="0" colspan="2">
+          <widget class="QLabel" name="label_3">
+           <property name="text">
+            <string>Example hostname: user@hostname.com</string>
+           </property>
+          </widget>
+         </item>
+         <item row="1" column="0">
           <widget class="QLabel" name="label">
            <property name="text">
             <string>Hostname</string>
            </property>
           </widget>
          </item>
-         <item row="0" column="1">
+         <item row="1" column="1">
           <widget class="QLineEdit" name="sshHostnameEdit"/>
          </item>
-         <item row="1" column="0">
-          <widget class="QLabel" name="label_2">
-           <property name="text">
-            <string>Username</string>
-           </property>
-          </widget>
-         </item>
-         <item row="1" column="1">
-          <widget class="QLineEdit" name="sshUsernameEdit"/>
-         </item>
          <item row="2" column="0">
-          <widget class="QLabel" name="label_3">
-           <property name="text">
-            <string>Password</string>
-           </property>
-          </widget>
-         </item>
-         <item row="2" column="1">
-          <widget class="QLineEdit" name="sshPasswordEdit">
-           <property name="text">
-            <string/>
-           </property>
-          </widget>
-         </item>
-         <item row="3" column="0">
           <widget class="QLabel" name="label_4">
            <property name="text">
             <string>Port</string>
            </property>
           </widget>
          </item>
-         <item row="3" column="1">
+         <item row="2" column="1">
           <widget class="QSpinBox" name="sshPortSpinBox">
            <property name="specialValueText">
             <string>Default</string>
@@ -207,34 +217,14 @@
            </property>
           </widget>
          </item>
+         <item row="3" column="0" colspan="2">
+          <widget class="QLabel" name="label_2">
+           <property name="text">
+            <string>Authentication is done using SSH keys.</string>
+           </property>
+          </widget>
+         </item>
         </layout>
-       </widget>
-      </item>
-      <item row="5" column="0">
-       <widget class="QLabel" name="textLabel5_2">
-        <property name="text">
-         <string>P&amp;ort:</string>
-        </property>
-        <property name="buddy">
-         <cstring>portSpinBox</cstring>
-        </property>
-       </widget>
-      </item>
-      <item row="0" column="0">
-       <widget class="QLabel" name="textLabel2">
-        <property name="text">
-         <string>D&amp;river</string>
-        </property>
-        <property name="buddy">
-         <cstring>driverCombo</cstring>
-        </property>
-       </widget>
-      </item>
-      <item row="6" column="0" colspan="2">
-       <widget class="QCheckBox" name="sshTunnelCheckBox">
-        <property name="text">
-         <string>Tunnel Connection Through SSH</string>
-        </property>
        </widget>
       </item>
      </layout>
