--- a/ExplorerWidget.ui
+++ b/ExplorerWidget.ui
@@ -51,7 +51,7 @@
          </widget>
         </item>
         <item>
-         <widget class="QPushButton" name="pushButton">
+         <widget class="QPushButton" name="removeButton">
           <property name="text">
            <string>Remove</string>
           </property>
