--- a/ExplorerWidget.ui
+++ b/ExplorerWidget.ui
@@ -39,7 +39,7 @@
       <item>
        <layout class="QHBoxLayout" name="horizontalLayout">
         <item>
-         <widget class="QPushButton" name="pushButton_2">
+         <widget class="QPushButton" name="addButton">
           <property name="text">
            <string>Add</string>
           </property>
