--- a/QueryWidget.ui
+++ b/QueryWidget.ui
@@ -13,38 +13,60 @@
   <property name="windowTitle">
    <string>Form</string>
   </property>
-  <layout class="QVBoxLayout" name="verticalLayout">
-   <item>
-    <widget class="QTextEdit" name="queryEdit">
-     <property name="maximumSize">
-      <size>
-       <width>16777215</width>
-       <height>150</height>
-      </size>
-     </property>
-    </widget>
-   </item>
-   <item>
-    <layout class="QHBoxLayout" name="horizontalLayout">
-     <item>
-      <widget class="QPushButton" name="clearButton">
-       <property name="text">
-        <string>Clear</string>
-       </property>
-       <property name="icon">
-        <iconset theme="edit-clear">
-         <normaloff/>
-        </iconset>
+  <layout class="QGridLayout" name="gridLayout_2">
+   <item row="0" column="0">
+    <layout class="QGridLayout" name="gridLayout">
+     <item row="1" column="0">
+      <layout class="QHBoxLayout" name="horizontalLayout">
+       <item>
+        <widget class="QPushButton" name="clearButton">
+         <property name="text">
+          <string>Clear</string>
+         </property>
+         <property name="icon">
+          <iconset theme="edit-clear">
+           <normaloff/>
+          </iconset>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QPushButton" name="runButton">
+         <property name="text">
+          <string>Run Query</string>
+         </property>
+         <property name="icon">
+          <iconset theme="run">
+           <normaloff/>
+          </iconset>
+         </property>
+        </widget>
+       </item>
+      </layout>
+     </item>
+     <item row="0" column="0">
+      <widget class="QTextEdit" name="queryEdit">
+       <property name="maximumSize">
+        <size>
+         <width>16777215</width>
+         <height>150</height>
+        </size>
        </property>
       </widget>
      </item>
-     <item>
-      <widget class="QPushButton" name="runButton">
+     <item row="2" column="0">
+      <widget class="QTableView" name="resultTableView"/>
+     </item>
+     <item row="3" column="0">
+      <widget class="QPushButton" name="exportButton">
+       <property name="enabled">
+        <bool>false</bool>
+       </property>
        <property name="text">
-        <string>Run Query</string>
+        <string>Export Results</string>
        </property>
        <property name="icon">
-        <iconset theme="run">
+        <iconset theme="filesave">
          <normaloff/>
         </iconset>
        </property>
@@ -52,24 +74,79 @@
      </item>
     </layout>
    </item>
-   <item>
-    <widget class="QTableView" name="resultTableView"/>
-   </item>
-   <item>
-    <widget class="QPushButton" name="exportButton">
-     <property name="enabled">
-      <bool>false</bool>
+   <item row="0" column="1">
+    <widget class="QToolBox" name="toolBox">
+     <property name="sizePolicy">
+      <sizepolicy hsizetype="Expanding" vsizetype="Preferred">
+       <horstretch>0</horstretch>
+       <verstretch>0</verstretch>
+      </sizepolicy>
      </property>
-     <property name="text">
-      <string>Export Results</string>
+     <property name="maximumSize">
+      <size>
+       <width>200</width>
+       <height>16777215</height>
+      </size>
      </property>
-     <property name="icon">
-      <iconset theme="filesave"/>
+     <property name="frameShape">
+      <enum>QFrame::NoFrame</enum>
      </property>
+     <property name="frameShadow">
+      <enum>QFrame::Plain</enum>
+     </property>
+     <property name="lineWidth">
+      <number>1</number>
+     </property>
+     <property name="currentIndex">
+      <number>0</number>
+     </property>
+     <property name="tabSpacing">
+      <number>0</number>
+     </property>
+     <widget class="SavedQueryWidget" name="savedQueryWidget">
+      <property name="geometry">
+       <rect>
+        <x>0</x>
+        <y>0</y>
+        <width>200</width>
+        <height>329</height>
+       </rect>
+      </property>
+      <attribute name="label">
+       <string>Saved</string>
+      </attribute>
+     </widget>
+     <widget class="QueryHistoryWidget" name="queryHistoryWidget">
+      <property name="geometry">
+       <rect>
+        <x>0</x>
+        <y>0</y>
+        <width>200</width>
+        <height>299</height>
+       </rect>
+      </property>
+      <attribute name="label">
+       <string>History</string>
+      </attribute>
+     </widget>
     </widget>
    </item>
   </layout>
  </widget>
+ <customwidgets>
+  <customwidget>
+   <class>QueryHistoryWidget</class>
+   <extends>QWidget</extends>
+   <header>QueryHistoryWidget.h</header>
+   <container>1</container>
+  </customwidget>
+  <customwidget>
+   <class>SavedQueryWidget</class>
+   <extends>QWidget</extends>
+   <header>SavedQueryWidget.h</header>
+   <container>1</container>
+  </customwidget>
+ </customwidgets>
  <resources/>
  <connections/>
 </ui>
