--- a/SavedQueryWidget.ui
+++ b/SavedQueryWidget.ui
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>SchemaWidget</class>
- <widget class="QWidget" name="SchemaWidget">
+ <class>SavedQueryWidget</class>
+ <widget class="QWidget" name="SavedQueryWidget">
   <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>400</width>
+    <width>182</width>
     <height>300</height>
    </rect>
   </property>
@@ -14,13 +14,6 @@
    <string>Form</string>
   </property>
   <layout class="QGridLayout" name="gridLayout">
-   <item row="0" column="0" colspan="3">
-    <widget class="QTableView" name="tableView">
-     <property name="enabled">
-      <bool>false</bool>
-     </property>
-    </widget>
-   </item>
    <item row="1" column="0">
     <spacer name="horizontalSpacer">
      <property name="orientation">
@@ -28,41 +21,34 @@
      </property>
      <property name="sizeHint" stdset="0">
       <size>
-       <width>207</width>
+       <width>101</width>
        <height>20</height>
       </size>
      </property>
     </spacer>
    </item>
    <item row="1" column="1">
-    <widget class="QPushButton" name="addColumnButton">
-     <property name="enabled">
-      <bool>false</bool>
-     </property>
+    <widget class="QToolButton" name="addButton">
      <property name="text">
-      <string>Add</string>
+      <string>...</string>
      </property>
      <property name="icon">
-      <iconset theme="add">
-       <normaloff/>
-      </iconset>
+      <iconset theme="add"/>
      </property>
     </widget>
    </item>
    <item row="1" column="2">
-    <widget class="QPushButton" name="removeColumnButton">
-     <property name="enabled">
-      <bool>false</bool>
-     </property>
+    <widget class="QToolButton" name="removeButton">
      <property name="text">
-      <string>Remove</string>
+      <string>...</string>
      </property>
      <property name="icon">
-      <iconset theme="remove">
-       <normaloff/>
-      </iconset>
+      <iconset theme="remove"/>
      </property>
     </widget>
+   </item>
+   <item row="0" column="0" colspan="3">
+    <widget class="QListWidget" name="listWidget"/>
    </item>
   </layout>
  </widget>
