--- a/ExplorerWidget.ui
+++ b/ExplorerWidget.ui
@@ -44,9 +44,7 @@
            <string>Add</string>
           </property>
           <property name="icon">
-           <iconset theme="add">
-            <normaloff/>
-           </iconset>
+           <iconset theme="list-add"/>
           </property>
          </widget>
         </item>
@@ -56,9 +54,7 @@
            <string>Remove</string>
           </property>
           <property name="icon">
-           <iconset theme="remove">
-            <normaloff/>
-           </iconset>
+           <iconset theme="list-remove"/>
           </property>
          </widget>
         </item>
