--- a/MainWindow.ui
+++ b/MainWindow.ui
@@ -83,18 +83,18 @@
      <x>0</x>
      <y>0</y>
      <width>624</width>
-     <height>19</height>
+     <height>27</height>
     </rect>
    </property>
    <widget class="QMenu" name="menuFile">
     <property name="title">
-     <string>File</string>
+     <string>Fi&amp;le</string>
     </property>
     <addaction name="actionQuit"/>
    </widget>
    <widget class="QMenu" name="menuTools">
     <property name="title">
-     <string>Connection</string>
+     <string>&amp;Connection</string>
     </property>
     <addaction name="actionNew_Connection"/>
     <addaction name="actionClose_Connection"/>
@@ -105,6 +105,11 @@
     <property name="title">
      <string>Tools</string>
     </property>
+    <addaction name="actionRecord"/>
+    <addaction name="separator"/>
+    <addaction name="actionImport_Database"/>
+    <addaction name="actionExport_Database"/>
+    <addaction name="actionClear_Database"/>
     <addaction name="separator"/>
     <addaction name="actionSplit_SQL_File"/>
    </widget>
@@ -120,18 +125,11 @@
    <addaction name="menuTools_2"/>
    <addaction name="menuHelp"/>
   </widget>
-  <widget class="QToolBar" name="mainToolBar">
-   <attribute name="toolBarArea">
-    <enum>TopToolBarArea</enum>
-   </attribute>
-   <attribute name="toolBarBreak">
-    <bool>false</bool>
-   </attribute>
-   <addaction name="actionNew_Connection"/>
-   <addaction name="actionClose_Connection"/>
-  </widget>
   <widget class="QStatusBar" name="statusBar"/>
   <widget class="QToolBar" name="toolBar">
+   <property name="enabled">
+    <bool>true</bool>
+   </property>
    <property name="windowTitle">
     <string>toolBar</string>
    </property>
@@ -141,16 +139,25 @@
    <attribute name="toolBarBreak">
     <bool>false</bool>
    </attribute>
+   <addaction name="actionNew_Connection"/>
+   <addaction name="actionClose_Connection"/>
+   <addaction name="separator"/>
    <addaction name="actionRefresh"/>
+   <addaction name="separator"/>
+   <addaction name="actionRecord"/>
+   <addaction name="separator"/>
+   <addaction name="actionImport_Database"/>
+   <addaction name="actionExport_Database"/>
+   <addaction name="actionClear_Database"/>
   </widget>
   <action name="actionNew_Connection">
    <property name="icon">
-    <iconset theme="connect">
+    <iconset theme="network-connect">
      <normaloff/>
     </iconset>
    </property>
    <property name="text">
-    <string>New Connection</string>
+    <string>&amp;New Connection</string>
    </property>
    <property name="toolTip">
     <string>New Database Connection</string>
@@ -158,12 +165,12 @@
   </action>
   <action name="actionClose_Connection">
    <property name="icon">
-    <iconset theme="disconnect">
+    <iconset theme="network-disconnect">
      <normaloff/>
     </iconset>
    </property>
    <property name="text">
-    <string>Close Connection</string>
+    <string>&amp;Close Connection</string>
    </property>
   </action>
   <action name="actionQuit">
@@ -173,7 +180,7 @@
     </iconset>
    </property>
    <property name="text">
-    <string>Quit</string>
+    <string>&amp;Quit</string>
    </property>
    <property name="toolTip">
     <string>Quit</string>
@@ -186,7 +193,7 @@
     </iconset>
    </property>
    <property name="text">
-    <string>About QuteSql</string>
+    <string>&amp;About QuteSql</string>
    </property>
   </action>
   <action name="actionAbout_Qt">
@@ -196,7 +203,7 @@
     </iconset>
    </property>
    <property name="text">
-    <string>About Qt</string>
+    <string>About &amp;Qt</string>
    </property>
   </action>
   <action name="actionRefresh">
@@ -206,7 +213,7 @@
     </iconset>
    </property>
    <property name="text">
-    <string>Refresh</string>
+    <string>&amp;Refresh</string>
    </property>
    <property name="toolTip">
     <string>Refresh the current database</string>
@@ -214,10 +221,71 @@
   </action>
   <action name="actionSplit_SQL_File">
    <property name="icon">
-    <iconset theme="edit-table-cell-split"/>
+    <iconset theme="edit-table-cell-split">
+     <normaloff/>
+    </iconset>
    </property>
    <property name="text">
-    <string>Split SQL File</string>
+    <string>&amp;Split SQL File</string>
+   </property>
+  </action>
+  <action name="actionImport_Database">
+   <property name="enabled">
+    <bool>false</bool>
+   </property>
+   <property name="icon">
+    <iconset theme="document-import"/>
+   </property>
+   <property name="text">
+    <string>Import Database</string>
+   </property>
+   <property name="toolTip">
+    <string>Import an SQL Database</string>
+   </property>
+  </action>
+  <action name="actionExport_Database">
+   <property name="enabled">
+    <bool>false</bool>
+   </property>
+   <property name="icon">
+    <iconset theme="document-export"/>
+   </property>
+   <property name="text">
+    <string>Export Database</string>
+   </property>
+   <property name="toolTip">
+    <string>Export the current database</string>
+   </property>
+  </action>
+  <action name="actionClear_Database">
+   <property name="enabled">
+    <bool>false</bool>
+   </property>
+   <property name="icon">
+    <iconset theme="edit-clear"/>
+   </property>
+   <property name="text">
+    <string>Clear Database</string>
+   </property>
+   <property name="toolTip">
+    <string>Clear the current database</string>
+   </property>
+  </action>
+  <action name="actionRecord">
+   <property name="checkable">
+    <bool>true</bool>
+   </property>
+   <property name="enabled">
+    <bool>false</bool>
+   </property>
+   <property name="icon">
+    <iconset theme="media-record"/>
+   </property>
+   <property name="text">
+    <string>Record</string>
+   </property>
+   <property name="toolTip">
+    <string>Record SQL Statements performed in GUI</string>
    </property>
   </action>
  </widget>
