--- a/ColumnDialog.ui
+++ b/ColumnDialog.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>318</width>
-    <height>214</height>
+    <height>249</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -47,12 +47,8 @@
         </property>
        </widget>
       </item>
-      <item row="3" column="1">
-       <widget class="QCheckBox" name="nullableCheckBox">
-        <property name="text">
-         <string/>
-        </property>
-       </widget>
+      <item row="0" column="1">
+       <widget class="QLineEdit" name="nameLineEdit"/>
       </item>
       <item row="0" column="0">
        <widget class="QLabel" name="label">
@@ -61,8 +57,12 @@
         </property>
        </widget>
       </item>
-      <item row="0" column="1">
-       <widget class="QLineEdit" name="nameLineEdit"/>
+      <item row="3" column="1">
+       <widget class="QCheckBox" name="nullableCheckBox">
+        <property name="text">
+         <string/>
+        </property>
+       </widget>
       </item>
       <item row="2" column="0">
        <widget class="QLabel" name="label_5">
@@ -73,6 +73,16 @@
       </item>
       <item row="2" column="1">
        <widget class="QLineEdit" name="lengthLineEdit"/>
+      </item>
+      <item row="5" column="0">
+       <widget class="QLabel" name="label_6">
+        <property name="text">
+         <string>Values</string>
+        </property>
+       </widget>
+      </item>
+      <item row="5" column="1">
+       <widget class="QPlainTextEdit" name="valuesTextEdit"/>
       </item>
      </layout>
     </widget>
